--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom,",
+    "eject": "react-scripts eject",
+    "server": "webpack-dev-server --content-base ./public --inline --hot"
   },
   "devDependencies": {
-    "webpack" : "*"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "*",
+    "webpack-dev-server": "^2.9.5"
   }
 }
